[package]
name = "luna-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_yml = "0.0.12"
tokio = { version = "1.44.0", features = ["full"] }
actix-web = "4"
actix-files = "0.6.6"
clap = { version = "4.5.34", features = ["derive"] }
uuid = {version = "1.16.0", features = ["v4"]}
snafu = "0.8.5"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
